Rendering with a movie strip behind a scene shows inconsistent results #37395

Closed
opened 2013-11-10 19:43:59 +01:00 by Ronan Paixão · 5 comments

%%%--- Operating System, Graphics card ---
Windows 8 64-bits, NVIDIA GT 540M

- Blender version with error, and version that worked ---

Broken on 2.69 and 2.68a.

- Short description of error ---

When rendering with a scene overlaid on top of a movie (Over Drop/Alpha Over scene strip over a movie strip), the movie gets whitish on second render forward.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open attached .blend file. Press F12 to render (renders fine). Press F12 to render again (renders with white tint). Compare both renders.

Notes: The attached .avi is for reference and is very short (it is not corrupted). It was cut just to show the problem (the full file also shows it, but is very big). The file was created with VLC screen capture and cut with Avidemux. Some movie files from different sources don't show this problem.

Sample renders in http://blenderartists.org/forum/showthread.php?316990-Rendering-with-a-movie-background-shows-inconsistent-results&p=2511120&viewfull=1#post2511120

%%%

%%%--- Operating System, Graphics card --- Windows 8 64-bits, NVIDIA GT 540M - Blender version with error, and version that worked --- Broken on 2.69 and 2.68a. - Short description of error --- When rendering with a scene overlaid on top of a movie (Over Drop/Alpha Over scene strip over a movie strip), the movie gets whitish on second render forward. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open attached .blend file. Press F12 to render (renders fine). Press F12 to render again (renders with white tint). Compare both renders. Notes: The attached .avi is for reference and is very short (it is not corrupted). It was cut just to show the problem (the full file also shows it, but is very big). The file was created with VLC screen capture and cut with Avidemux. Some movie files from different sources don't show this problem. Sample renders in http://blenderartists.org/forum/showthread.php?316990-Rendering-with-a-movie-background-shows-inconsistent-results&p=2511120&viewfull=1#post2511120 %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed… I wonder what happens here. :/

Sergey, I offer it to you! :P%%%

%%%Confirmed… I wonder what happens here. :/ Sergey, I offer it to you! :P%%%
Author

%%%It looks like the problem is some sort of issue in the video scaling or some related thing.

I found two workarounds:

  1. In this case, the video and the render were 1024x768. If I increased or decreased one pixel in any direction, the problem was gone.

  2. In this process, I found that enabling the "Image Offset" option of the strip disabled the auto-scaling and the problem vanished too (without changing the render size).

Both workarounds involve setting a scaling different from the original movie size, though I have no idea what triggers the white tinting, specially since it only happens when there's a scene overlapping the movie, and it doesn't happen with every movie.%%%

%%%It looks like the problem is some sort of issue in the video scaling or some related thing. I found two workarounds: 1) In this case, the video and the render were 1024x768. If I increased or decreased one pixel in any direction, the problem was gone. 2) In this process, I found that enabling the "Image Offset" option of the strip disabled the auto-scaling and the problem vanished too (without changing the render size). Both workarounds involve setting a scaling different from the original movie size, though I have no idea what triggers the white tinting, specially since it only happens when there's a scene overlapping the movie, and it doesn't happen with every movie.%%%

%%%Fixed in svn rev61229. Thanks for the report, closing.%%%

%%%Fixed in svn rev61229. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37395
No description provided.