Fix #37395: Rendering with a movie strip behind a scene shows inconsistent results

For now just make sure conversion to sequencer space will ensure imbuf's
color space names is set properly.

Might be some further changes needed to make colorspace flow more clear
in sequencer, but that's for later.