source/blender/blenkernel/intern/sequencer.c
@@ -463,6 +463,7 @@ void BKE_sequencer_imbuf_to_sequencer_space(Scene *scene, ImBuf *ibuf, int make_
 		if (!STREQ(float_colorspace, to_colorspace)) {
 			IMB_colormanagement_transform_threaded(ibuf->rect_float, ibuf->x, ibuf->y, ibuf->channels,
 			                                       from_colorspace, to_colorspace, true);
+			sequencer_imbuf_assign_spaces(scene, ibuf);
 		}
 	}
 }
